Version mobile en cour. Bug condition de width. A continuer

--- a/style.css
+++ b/style.css
@@ -172,3 +172,9 @@ button:hover {
   margin: 0%;
 }
 
+@media only screen and (max-width: 426px) {
+  .container{
+    flex-direction: column-reverse;
+  }
+
+}
